Add new feature SSE (Server Send Event) (#160)
* Add low level `SSE` API implementation on `libnetty-example`

* Fix wrong name of HTTP content compressor

* Add SseEventBuilder

* Add SseEventStream & SseEventEncoder

* Finish SSE event stream feature